@@ -1,10 +1,10 @@
 Package: tm
 Title: Text Mining Package
 Version: 0.2-2
-Date: 2007-07-15
+Date: 2007-07-17
 Author: Ingo Feinerer <h0125130@wu-wien.ac.at>
 Maintainer: Ingo Feinerer <h0125130@wu-wien.ac.at>
-Depends: filehash, Matrix, methods, Snowball, XML
+Depends: R (>= 2.5.0), filehash, Matrix, methods, Snowball, XML
 Imports: proxy
 Suggests: Rstem (>= 0.3-1)
 Description: A framework for text mining applications within R.
