@@ -1,3 +1,8 @@
+2007-07-17  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* R/termdocmatrix.R (TermDocMatrix): Improved efficiency. Kudos to
+	Christian Buchta.
+
 2007-07-15  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* inst/doc/tm.Rnw: Update vignette (readPDF, readHTML, preprocessReut21578XML).
